# meetmanager-app

./: .docker-compose.yml.swp  .env - Copy.example  .env.example  .env_template  .gitignore  CLAUDE.md  PLAN_ORGANIZER.md  README.md  docker-compose.railway.yml  docker-compose.test.yml  docker-compose.yml  railway.toml
.github/workflows/: ci.yml  release.yml
.kiro/: context.md
backend/: Cargo.toml  Dockerfile  docker-compose.yml  meet.lxf  requirements.txt  template.mdb  template_struct.json
backend/app/: best_times.py  crud.py  database.py  events.py  export.py  export_entries.py  invoices.py  main.py  meet_parser.py  models.py  schemas.py  seed.py  template_reader.py
backend/app/routers/: api.py
backend/src/: auth.rs  best_times.rs  db.rs  events.rs  export.rs  invoices.rs  main.rs  meet_parser.rs  models.rs  seed.rs  state.rs
backend/src/routes/: admin.rs  athletes.rs  auth_routes.rs  clubs.rs  events_routes.rs  exports.rs  invoices_routes.rs  mod.rs  registrations.rs  uploads.rs
docs/: admin_deployment_guide.md  build-pdfs.sh  manual_en.md  manual_fr.md  pdf-header.tex  workflow_en.md  workflow_fr.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: Footer.jsx  api.js  i18n.jsx  index.css  main.jsx
frontend/src/pages/: Admin.jsx  Athletes.jsx  Clubs.jsx  DataManagement.jsx  Login.jsx  MeetDetail.jsx  Meets.jsx  Organizer.jsx  Register.jsx  (+2 more)
quantum/: LSTSTYLE.en-UK
tests/: conftest.py  generate_test_results.py  test.env  test_integration.py
tests/fixtures/: test_results.lxf
