[package]
name = "meetmanager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.37.1", features = ["serialize"] }
zip = "2.2.1"
sha2 = "0.10.8"
base64 = "0.22.1"
rand = "0.8.5"
thiserror = "2.0.4"
dotenvy = "0.15.7"
aes-gcm = "0.10.3"
